--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 body{
-  background-color: #FFF;
+  background-color: #AAA;
   color: #000;
 }
 .content {
@@ -20,36 +20,72 @@ a, a.active, a.visited, a.hover{
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="lib/three.min.js"></script>
 <script type="x-shader/x-vertex" id="vertexShader">
-//varying vec3 vNormal;
+
+attribute vec3 tangent;
+varying vec3 vNormal;
+varying vec3 vTangent;
 varying vec3 vPosition;
 
 void main(){
-  //vNormal = normal;
+  vNormal = normal;
+  vTangent = tangent;
   vPosition = position;
-
   gl_Position = projectionMatrix *
     modelViewMatrix *
     vec4(position,1.0);
 }
+
 </script>
+
 <script type="x-shader/x-fragment" id="fragmentShader">
-//varying vec3 vNormal;
+
+varying vec3 vNormal;
+varying vec3 vTangent;
 varying vec3 vPosition;
 uniform float width;
 uniform float height;
+
+float drawLine(vec2 p1, vec2 p2) {
+  vec2 uv = gl_FragCoord.xy / vec2(width,height);
+
+  float a = abs(distance(p1, uv));
+  float b = abs(distance(p2, uv));
+  float c = abs(distance(p1, p2));
+
+  if (a >= c || b >= c){
+    return 0.0;
+  }
+
+  float p = (a + b + c) * 0.5;
+
+  // median to (p1, p2) vector
+  float h = 2.0/c * sqrt( p * (p - a) * (p - b) * (p - c));
+
+  return mix(1.0,0.0,smoothstep(0.5*0.03 ,1.5*0.03, h));
+}
+
 
 float rand(vec2 co){
   return fract(sin(dot(co.xy,vec2(12.9898,78.233)))* 43758.5453);
 }
 
 void main(){
-  //float h = rand(vNormal.xy);
-  gl_FragColor = vec4(
-    gl_FragCoord.x/800.0,
-    gl_FragCoord.y/800.0,
-    gl_FragCoord.z/800.0,
-    1.0);
+  //float h = rand(vTangent.xy);
+  //if (vTangent.x<0.5){
+  //  discard;
+  //}
+  //gl_FragColor = vec4(
+  //  gl_FragCoord.x/width,
+  //  gl_FragCoord.y/height,
+  //  vTangent.x,
+  //  1.0);
+  //gl_FragColor = vec4(
+  //   max(max(drawLine(vec2(0.1, 0.1), vec2(0.1, 0.9)),
+  //           drawLine(vec2(0.1, 0.9), vec2(0.7, 0.5))),
+  //           drawLine(vec2(0.1, 0.1), vec2(0.7, 0.5))));
+  gl_FragColor = vec4(drawLine(vec2(0.1, 0.1), vec2(0.1, 0.9)));
 }
+
 </script>
 
 
