--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <head>
 <style>
 body{
-  background-color: #222;
+  background-color: #333;
   color: #000;
+}
+#box canvas {
+  background-color: #FFF;
 }
 .content {
   position: relative;
@@ -47,14 +50,20 @@ void main(){
 varying vec3 vPosition;
 varying vec3 vColor;
 uniform float size;
+uniform float opacity;
+
+float rand(vec2 co){
+  return fract(sin(dot(co.xy,vec2(12.9898,78.233)))* 43758.5453);
+}
 
 void main(){
   
   gl_FragColor = vec4(
+    vColor.x,
     0.0,
     vColor.y,
-    vColor.x,
-    1.0);
+    opacity
+  );
 }
 
 </script>
