--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ body{
   color: #000;
 }
 #box canvas {
-  background-color: #333;
+  background-color: #000;
 }
 .content {
   position: relative;
@@ -22,6 +22,7 @@ a, a.active, a.visited, a.hover{
 </style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="lib/three.min.js"></script>
+<script src="color/color.js"></script>
 <script type="x-shader/x-vertex" id="vertexShader">
 
 attribute vec3 color;
