--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
 body{
   background-color: #fff;
   color: #000;
+  padding: 0px;
 }
 #box canvas {
-  background-color: #000;
+  background-color: #fff;
+  padding: 0px;
+  margin: 0px;
 }
 .content {
   position: relative;
-  width: 100%; 
-  margin: auto;
-  text-align: center;
-  padding-top: 40px;
+  width: 1024px; 
+  text-align:center;
+  margin: 0 auto;
 }
 a, a.active, a.visited, a.hover{
   color: #000;
@@ -79,7 +81,9 @@ void main(){
 <body>
 <div class="content">
   <div id="box"></div>
-  <script src="src/meander.js"></script>
+  <br>
+  <a href="http://inconvergent.net">inconvergent.net</a> | <a href="https://twitter.com/inconvergent">@inconvergent</a><br><br>
 </div>
+<script src="src/meander.js"></script>
 </body>
 </html>
