--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ void main(){
 <body>
 <div class="content">
   <div id="box"></div>
+  point on the canvas and press the left mouse button.
   <br>
   <a href="http://inconvergent.net">inconvergent.net</a> | <a href="https://twitter.com/inconvergent">@inconvergent</a><br><br>
 </div>
