--- a/index.html
+++ b/index.html
@@ -1,20 +1,86 @@
 <html>
 <head>
 <style>
+
+/* #Reset & Basics (Inspired by E. Meyers)
+================================================== */
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+  display: block; }
+body {
+  line-height: 1; }
+ol, ul {
+  list-style: none; }
+blockquote, q {
+  quotes: none; }
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none; }
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+/* #Typography
+================================================== */
+  h1, h2, h3, h4, h5, h6 {
+    color: #181818;
+    /*font-family: 'Droid Serif', serif;*/
+    font-family: 'Droid Sans', sans-serif;
+    line-height: 30px;
+    font-style: italic;
+    font-weight: normal;
+    -webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
+    -webkit-text-size-adjust: 100%;
+  }
+  h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { font-weight: inherit; }
+  h1,.h1 { font-size: 46px; line-height: 50px; margin-bottom: 14px;}
+  h2,.h2 { font-size: 35px; line-height: 40px; margin-bottom: 10px; }
+  h3,.h3 { font-size: 28px; line-height: 34px; margin-bottom: 8px; }
+  .subheader { color: #777; }
+
+  p { margin: 0 0 20px 0; }
+  p img { margin: 0; }
+  p.lead { font-size: 21px; line-height: 27px; color: #777;  }
+
+  em { font-style: italic; }
+  strong { font-weight: bold; color: #333; }
+  small { font-size: 80%; }
+
 body{
   background-color: #fff;
   color: #000;
   padding: 0px;
+  margin: 0px;
+  font-family: 'Droid Sans', sans-serif;
+  -webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
+  -webkit-text-size-adjust: 100%;
+  font-style: italic;
 }
 #box canvas {
   background-color: #fff;
   padding: 0px;
   margin: 0px;
 }
+.message {
+  top: 0px;
+  left: 0px;
+  position: absolute;
+  padding: 10px;
+  text-align: left;
+  width: 300px;
+  opacity: 0.5;
+}
 .content {
   position: relative;
-  width: 1024px; 
-  text-align:center;
+  width: 100%; 
+  text-align: center;
   margin: 0 auto;
 }
 a, a.active, a.visited, a.hover{
@@ -67,9 +133,7 @@ void main(){
   float pixOpacity = (1.0-clamp(abs(vNormal.y)/size*40.0,0.0,0.95));
   
   gl_FragColor = vec4(
-    vColor.x,
-    vColor.y,
-    vColor.z,
+    vColor,
     pixOpacity*rand(vPosition.xy+vColor.xy)
     //opacity
     //opacity*rand(vPosition.xy+vColor.xy)
@@ -77,13 +141,18 @@ void main(){
 }
 
 </script>
+<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <div class="content">
+  <div class="message">
+    <h1 class="h2"><strong>Meander</strong></h1>
+    <div>
+      <strong>Tap the screen or use the left mouse button.</strong><br><hr>
+      <a style="margin-top:100px" href="http://inconvergent.net">inconvergent.net</a><br>
+    </div>
+  </div>
   <div id="box"></div>
-  point on the canvas and press the left mouse button.
-  <br>
-  <a href="http://inconvergent.net">inconvergent.net</a> | <a href="https://twitter.com/inconvergent">@inconvergent</a><br><br>
 </div>
 <script src="src/meander.js"></script>
 </body>
