--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="utf-8" />
@@ -70,7 +71,7 @@ table {
   h2,.h2 { font-size: 35px; line-height: 40px; margin-bottom: 10px; }
   h3,.h3 { font-size: 28px; line-height: 34px; margin-bottom: 8px; }
 
-  strong { font-weight: bold; color: #FFF; }
+  strong { font-weight: bold; }
 
 body{
   background-color: #000;
@@ -87,6 +88,8 @@ body{
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  overflow: hidden;
+  cursor: pointer;
 }
 #box canvas {
   /*background-color: #fff;*/
@@ -115,6 +118,8 @@ a, a.active, a.visited, a.hover{
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="lib/three.min.js"></script>
+<!--<script src="lib/stats.min.js"></script>-->
+<script src="lib/ndarray.js"></script>
 <script src="lib/Detector.js"></script>
 <script src="color/color.js"></script>
 
@@ -130,10 +135,9 @@ void main(){
   vColor = color;
   vNormal = normal;
   float alive = normal.z;
-  vec3 newpos = position + vec3(10000.0,10000.0,0.0)*alive;
   gl_Position = projectionMatrix *
     modelViewMatrix *
-    vec4(newpos,1.0);
+    vec4(position.xy,0.0,1.0);
 }
 
 </script>
@@ -151,10 +155,14 @@ float rand(vec2 co){
 }
 
 void main(){
-  float pixOpacity = (1.0-clamp(abs(vNormal.y)/size*40.0,0.0,0.95))*opacity;
+  float h = sqrt(abs(vPosition.z)/100.0);
+  //float opac = (1.0-clamp(abs(zz),0.0,0.95))*opacity;
+  float opac = pow(1.0-abs(h),2.0)*opacity;
+  float rnd = rand(vNormal.xy+vColor.xy);
+  //float rnd = rand(vec2(0.0,vPosition.z)+vColor.xy);
   gl_FragColor = vec4(
     vColor,
-    pixOpacity*rand(vNormal.xy+vColor.xy)
+    clamp(pow(opac,1.8)*rnd,0.0,opacity)
   );
 }
 
@@ -178,7 +186,7 @@ void main(){
     <h1 class="h2"><strong>Meander</strong></h1>
     <div>
       <strong>Tap or click the screen.</strong><br><hr>
-      <a href="http://inconvergent.net">inconvergent.net</a><br><br>
+      <a href="http://inconvergent.net">inconvergent.net</a>
     </div>
   </div>
   <div id="box"></div>
